k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: default
  labels:
    app: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
